fix: update media query breakpoint for improved responsiveness on smaller screens

--- a/app/src/pages/unparameterized/Home/HomeForTenant/SectionSearch/styles.css
+++ b/app/src/pages/unparameterized/Home/HomeForTenant/SectionSearch/styles.css
@@ -361,7 +361,7 @@
   }
 }
 
-@media (max-width: 420px) {
+@media (max-width: 421px) {
   .section-Search {
     min-height: 100vh;
     border-radius: 0;
